lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:4: error: method step has return statement; needs result type
		return getPoussee()-1;
                ^Lander:7: error: method step has return statement; needs result type
		return 4;
                ^