lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
def step() = {
	if (getVitesseY()<=10) {
		return getPoussee()-1;
	}
	else {
		return 4;
	}
}
